--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,9 +1,9 @@
 EXPERIMENT:
-  ID: Nuscenes-Maps-NoAugs-RadarFeatures
+  ID: Nuscenes-NoAugs-NoRadarFeatures
 FILTER:
   THRESHOLD: 0.84
 MODEL:
-  RADAR_FEATURES: true
+  RADAR_FEATURES: false
   VOXEL_SIZE: 0.1
 TRAIN:
   AUGMENTATION: false
@@ -17,8 +17,8 @@ TRAIN:
 
 poses_dir: poses
 maps_dir: maps
-scans_dir: scans
-labels_dir: labels
+scans_dir: scans_dpr
+labels_dir: labels_dpr
 
 DATA:
   MAPS:
